- [BUG FIX] Calculated property's fields weren't handled as existing fields and show errors.
- [BUG FIX] In case of the keyed value is just 0, the id attribute wasn't assigned to each element.
- [BUG FIX] Fix clearing and saving data in a textarea element of the first related field when 
  using Microsoft Edge or Internet Explorer.

Ver.5.3 (February 21, 2016)
- Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
  in the Auth_Support directory.
- Master/Detail style UI (controlled by 'navi-control' key) support mobile environment ex. JQuery Mobile.
  The Samples/Sample_Mobile folder includes some demos for mobile device.
- SQL aggregation can be defined as a read-only context. The aggregation-select,
  aggregation-from, aggregation-group-by key are added.
- The database update communucations (Create, Update, Delete, Copy) are working in asynchronous mode.
- MediaAccess class can consider EXIF orientation in a JPEG file (require Exif and GD extension
  for PHP).
- Generic enclosure/repeater mechanism is implemented. See Sample_forDebugging/genericrepeater.html
  or the link "generic enclosure/repeater" in "Debugging" row of the sample portal page.
- Update phpseclib to version 1.0.0.
- The "source" key for data source of first parameter of IM_Entry function is introduced. Contexts that
  has same "source" key's value is going to be updated and re-constructed when insert/delete operation
  is happend in one of them.
- The getNodeIdsHavingTargetFromNode method of INTERMediatorOnPage object accepts the array
  for the first parameter.
- The credential for authentication can be stored in the sessionStorage.
- Utility methods, dateStringISO, dateStringFileMaker and timeString, are defined in INTERMediatorLib.
- Be able to customize a style of the file uploading area when using the file upload component.
- LDAPAuth class can report errors.
- INTER-Mediator version can be described in the 'metadata.json' file, and dist-docs/build.sh