@@ -26,7 +26,7 @@ $dbPassword = 'password';
 
 /* DB_FileMaker_FX aware below:
  */
-$dbServer = '10.0.1.21';
+$dbServer = '127.0.0.1';
 $dbPort = '80';
 $dbDataType = 'FMPro12';
 $dbDatabase = 'TestDB';
