@@ -73,6 +73,8 @@ Ver.5.4 (in release candidate)
 - [BUG FIX] In case of the keyed value is just 0, the id attribute wasn't assigned to each element.
 - [BUG FIX] Fix clearing and saving data in a textarea element of the first related field when 
   using Microsoft Edge or Internet Explorer.
+- [BUG FIX] Fix DB_FileMaker_FX class for DataConverter_FMDateTime class to handle the fields on
+  the portal objects with portal access mode correclty.
 
 Ver.5.3 (February 21, 2016)
 - Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
